Revert "Revert "Refactor""
This reverts commit b72464933628275e8033dee8dd9f61226b5b8a07.